crates/k-rust/tests/snapshots/inner_rules__scopes_rewrites_inside_local_functions_before_infix_operators.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Type ::= \"type\" [symbol(type)]\n  syntax KItem ::= Type\n  syntax Map ::= KItem \"|->\" KItem [symbol(pair)]\n  syntax KItem ::= Map\n  syntax Foo ::= \"foo(\" Map \")\" [symbol(foo)]\n  rule foo(type |-> type => type |-> #fun(T::Type => T |-> T)(type))\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "foo(pair(type(.KList),type(.KList))=>pair(type(.KList),#fun2(#SemanticCastToType(T)=>pair(#SemanticCastToType(T),#SemanticCastToType(T)),type(.KList))))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
