crates/k-rust/tests/snapshots/inner_rules__shares_inference_identity_for_a_parenthesized_rewrite_across_bracket_alternatives.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Id ::= r\"[a-z]+\" [token]\n  syntax KItem ::= Id\n  syntax Map ::= \".Map\" [symbol(dotMap)]\n               | KItem \"|->\" KItem [symbol(mapEntry)]\n  syntax KItem ::= Map\n  rule x |-> (_ => ?_) => .Map\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "mapEntry(#token(\"x\",\"Id\"),#SemanticCastToKItem(_)=>#SemanticCastToKItem(?_))=>dotMap(.KList)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
