crates/k-rust/tests/snapshots/inner_rules__standard_prelude_definition@concrete.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "definition::json::to_string_pretty of `module MAIN endmodule` loaded with the embedded prelude, concrete excluded"
---
ArtifactDigest {
    bytes: 2093546,
    sha256: "d328db0eec8845bdd6d10f35370765a9267f6d74f31e128e4f5fd94bd89063ac",
}
