crates/k-rust/tests/snapshots/inner_rules__uses_layout_from_an_imported_module.snap
---
source: crates/k-rust/tests/inner_rules.rs
expression: sentences
---
[
    SentenceSummary {
        kind: "rule",
        body: "`x_MAIN_Exp`(.KList)=>`x_MAIN_Exp`(.KList)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
