crates/k-rust/tests/snapshots/inner_rules__uses_the_shared_rewrite_sort_to_prune_syntax_alternatives.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Bool ::= Int \"<Int\" Int [symbol(_<Int_)]\n  syntax Buf ::= \".Buf\" [symbol(.Buf)]\n  syntax Buf ::= Buf \"[\" Int \":=\" Buf \"]\" [symbol(writeBuf), function]\n  syntax Stack ::= \".Stack\" [symbol(.Stack)]\n  syntax Stack ::= Stack \"[\" Int \":=\" Stack \"]\" [symbol(writeStack), function]\n  rule _ [ START := _ ] => .Buf requires START <Int 0\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "writeBuf(#SemanticCastToBuf(_),#SemanticCastToInt(START),#SemanticCastToBuf(_))=>`.Buf`(.KList)",
        requires: "`_<Int_`(#SemanticCastToInt(START),#token(\"0\",\"Int\"))",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
