crates/k-rust/tests/snapshots/inner_rules__z3_prunes_ill_typed_ambiguity_branches.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax A ::= \"a\" [symbol(a)]\n  syntax B ::= \"b\" [symbol(b)]\n  syntax Exp ::= \"f(\" A \")\" [symbol(fa)]\n               | \"f(\" B \")\" [symbol(fb)]\n  syntax Pair ::= \"pair(\" Exp \",\" A \")\" [symbol(pair)]\n  rule pair(f(X), X) => pair(f(a), a)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "pair(fa(#SemanticCastToA(X)),#SemanticCastToA(X))=>pair(fa(a(.KList)),a(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
