crates/k-rust/tests/snapshots/inner_rules__z3_prunes_ill_typed_overloaded_generic_applications.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax A ::= \"a\" [symbol(a)]\n  syntax B ::= \"b\" [symbol(b)]\n  syntax A ::= \"pa\" A [symbol(pick)]\n  syntax B ::= \"pb\" B [symbol(pick)]\n  rule pick(a) => a\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "pick(a(.KList))=>a(.KList)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
